--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,62 @@
+.container {
+  margin: 120px auto;
+  max-width: 600px;
+}
+
 body {
-  background-color: aqua;
+  background-color: #fffffb;
+  font-family: "Poppins", sans-serif;
+}
+a {
+  color: #805fd4;
+  text-decoration: dashed;
+}
+h1 {
+  text-align: center;
+  font-size: 36px;
+  line-height: 1.5;
+  color: indigo;
+}
+
+form {
+  padding: 30px;
+  background-color: white;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  border-radius: 10px;
+  display: flex;
+  margin-bottom: 30px;
+}
+.instructions {
+  padding: 16px;
+  border: 1px solid rgba(39, 33, 66, 0.5);
+  width: 80%;
+  font-size: 16px;
+  line-height: 20px;
+  border-radius: 5px;
+}
+.submit-button {
+  margin-left: 10px;
+  color: #f9f7fe;
+  background: #805fd4;
+  font-size: 16px;
+  border: none;
+  width: 150px;
+  border-radius: 5px;
+  padding: 14px 24px;
+}
+
+.poem {
+  font-size: 16px;
+  background-color: white;
+  padding: 20px;
+  line-height: 2;
+  border-left: 3px solid #805fd4;
+  box-shadow: 0px 4px 30px 0 rgba(39, 33, 66, 0.03);
+  border-radius: 5px;
+}
+
+footer {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 30px;
 }
