--- a/src/styles.css
+++ b/src/styles.css
@@ -9,28 +9,41 @@ body {
   margin: 85px auto;
   max-width: 900px;
   background-color: rgba(0, 0, 0, 0.6);
-  border-radius: 10px;
+  border-radius: 30px;
   padding: 80px;
 }
 
 h1 {
+  font-family: "Bungee Spice", sans-serif;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 30px;
+  padding: 30px;
   text-align: center;
   font-size: 36px;
   line-height: 1.5;
 }
 
 form {
-  padding: 20px;
-  border-radius: 10px;
   display: flex;
+}
+.form-container {
   margin-bottom: 30px;
+  padding: 15px 20px;
+  border-radius: 10px;
+}
+.hint {
+  line-height: 1.5;
+  margin-top: 5px;
+  margin-left: 15px;
+  font-size: 12px;
+  opacity: 0.8;
 }
 .instructions {
   padding: 16px;
-  width: 80%;
+  width: 70%;
   font-size: 16px;
   line-height: 20px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 .submit-button {
   margin-left: 10px;
@@ -40,17 +53,40 @@ form {
   font-weight: bold;
   border: none;
   width: 150px;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 14px 24px;
+}
+.hidden {
+  display: none;
+}
+
+.generating {
+  text-align: center;
+  animation: blink-animation 1s steps(5, start) infinite;
+  -webkit-animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
 
 .recipe {
   font-size: 16px;
   color: black;
   background-color: white;
-  padding: 20px;
+  padding: 40px;
   line-height: 2;
-  border-radius: 5px;
+  border-radius: 30px;
+}
+.recipe h2 {
+  text-align: center;
 }
 .recipe strong {
   color: crimson;
@@ -58,14 +94,13 @@ form {
 
 footer {
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.4);
-  border-radius: 5px;
-  padding: 15px;
-  max-width: 900px;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 15px 25px;
+
   font-size: 16px;
   margin: 0 auto;
 }
 a {
   color: yellow;
-  
 }
