--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ form {
 .hint {
   line-height: 1.5;
   margin-top: 5px;
-  margin-left: 15px;
+  margin-left: 18px;
   font-size: 12px;
   opacity: 0.8;
 }
@@ -97,10 +97,76 @@ footer {
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding: 15px 25px;
-
   font-size: 16px;
   margin: 0 auto;
 }
 a {
-  color: yellow;
+  color: #f0b534;
+}
+
+@media (max-width: 750px) {
+  body {
+    background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/143/original/pexels-chokniti-khongchum-2280569.jpg?1703311015);
+  }
+  h1 {
+    font-size: 25px;
+    background-color: transparent;
+    padding: 0;
+  }
+  .container {
+    margin-bottom: 5px;
+    padding: 5px;
+  }
+  .form-container {
+    margin-bottom: 0;
+  }
+  .submit-button {
+    font-size: 14px;
+    padding: 7px 16px;
+  }
+  .instructions {
+    font-size: 14px;
+    padding: 5px;
+    width: 90%;
+  }
+  .hint {
+    font-size: 12px;
+    text-align: center;
+    margin-top: 8px;
+  }
+  .generating {
+    font-size: 14px;
+  }
+  h2 {
+    font-size: 20px;
+    line-height: 1.3;
+  }
+  .recipe {
+    font-size: 12px;
+    padding: 10px 15px;
+    line-height: 1.5;
+  }
+
+  footer {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 290px) {
+  .instructions {
+    width: 95%;
+  }
+  .submit-button {
+    font-size: 10px;
+    padding: 0;
+    width: 25%;
+  }
+  .recipe {
+    padding: 5px;
+  }
+  h2 {
+    font-size: 15px;}
+  .recipe strong {
+    display: none;
+  }
 }
